# benchmark

./: .gitignore  README.md  pyproject.toml  requirements_2.0.md  srs.md
configs/: algorithm.example.yaml  dataset.example.yaml  orbslam3.example.yaml
docs/hld/: hld.md
docs/lld/: lld.md
docs/research/: research.md
docs/srs/: requirements.md  srs.md
docs/templates/: hld_template.md  lld_template.md  research_template.md  srs_template.md
src/slam_benchmark/: __init__.py  cli.py  config.py
src/slam_benchmark/algorithms/: __init__.py  contracts.py
src/slam_benchmark/compilation/: __init__.py  models.py  service.py  storage.py
src/slam_benchmark/datasets/: __init__.py  contracts.py  errors.py  handlers.py  models.py  parsers.py  paths.py  service.py  storage.py
src/slam_benchmark/datasets/segmentation/: __init__.py  flight_mode.py  timestamp.py
src/slam_benchmark/execution/: __init__.py  command.py  models.py  runner.py  service.py  storage.py
tests/: test_algorithm_contracts.py  test_build_module.py  test_dataset_manager.py  test_dataset_parsers.py  test_dataset_segmentation.py  test_execution_module.py  test_mock_algorithms.py
tests/fixtures/mock_algorithms/: README.md
tests/fixtures/mock_algorithms/algorithm1/: build.sh  main.c
tests/fixtures/mock_algorithms/algorithm2/: build.sh  main.c
tests/fixtures/mock_algorithms/algorithm3/: build.sh  main.c
tools/: generate_dataset_anomaly_suite.py  verify_dataset_anomaly_suite.py
