[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "slam-benchmark"
version = "0.1.0"
description = "Local SLAM algorithm benchmark pipeline"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.12,<1",
]

[project.scripts]
benchmark = "slam_benchmark.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
